@@ -28,7 +28,7 @@
     </tr>
     <tr>
       <th>Latest Development Release</th>
-      <td><a href="v4.0.0.html">v4.0.0beta4</a></td>
+      <td><a href="v4.0.0.html">v4.0.0beta5</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
